force-app/main/default/objects/SystemDataOwnersSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To Store System Data Owner details</description>
    <fields>
        <fullName>ByPassUser__c</fullName>
        <description>To capture the user detail for which the updateOwner Logic is bypassed</description>
        <label>ByPassUser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederationId__c</fullName>
        <description>To Store System Data Owner details of Contact and Account object. It is used in Apex code to ensure affiliated contacts are owned by a system data owner (rather than an individual user)</description>
        <label>FederationId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>To store the object name</description>
        <label>Object</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidRecordTypes__c</fullName>
        <description>Valid record types of affiliation for which update owner to system data owner logic should work</description>
        <label>ValidRecordTypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SystemDataOwnersSetting</label>
</CustomObject>